Fixes header on mobile (by increasing height and moving dropdowns under menu toggle and title).

--- a/app/assets/stylesheets/it4.base/_base.page.sass
+++ b/app/assets/stylesheets/it4.base/_base.page.sass
@@ -11,6 +11,8 @@ body
   overflow-x: hidden
   background: $c-background
   padding-top: 72px
+  @include below(700px)
+    padding-top: $height-header-mobile
   @include transition(.4s)
 
   // This is essentially a hack to fix a 
